unpackaged/main/default/objects/PotentielContainers__c/PotentielContainers__c.object-meta.xml
<CustomObject>
    <label>Potentiel Containers</label>
    <nameField>
        <displayFormat>GF-PCN-{0000000000}</displayFormat>
        <label>Identifiant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potentiel Containers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>