unpackaged/main/default/objects/PotentielContainers__c/fields/CategorieProduit__c.field-meta.xml
<CustomField>
    <fullName>CategorieProduit__c</fullName>
    <label>Catégorie Produit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CF10</fullName>
            </value>
            <value>
                <fullName>CF25</fullName>
            </value>
            <value>
                <fullName>CF30</fullName>
            </value>
            <value>
                <fullName>CF35</fullName>
            </value>
            <value>
                <fullName>CF50</fullName>
            </value>
            <value>
                <fullName>CF55</fullName>
            </value>
            <value>
                <fullName>CF85</fullName>
            </value>
            <value>
                <fullName>CF110</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>