unpackaged/main/default/objects/PotentielContainers__c/fields/Classement__c.field-meta.xml
<CustomField>
    <fullName>Classement__c</fullName>
    <label>Classement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>