unpackaged/main/default/objects/PotentielContainers__c/fields/Commentaires__c.field-meta.xml
<CustomField>
    <fullName>Commentaires__c</fullName>
    <label>Commentaires</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>