unpackaged/main/default/objects/PotentielContainers__c/fields/CompteRaisonSociale__c.field-meta.xml
<CustomField>
    <fullName>CompteRaisonSociale__c</fullName>
    <label>Compte (Raison Sociale)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Potentiel Containers</relationshipLabel>
    <relationshipName>PotentielContainers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>