unpackaged/main/default/objects/PotentielContainers__c/fields/Echeance_jrs_restants__c.field-meta.xml
<CustomField>
    <fullName>Echeance_jrs_restants__c</fullName>
    <formula>if(NOT(ISBLANK(DateEcheance__c)),DateEcheance__c - TODAY(),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Echeance jrs restants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>