unpackaged/main/default/objects/PotentielContainers__c/fields/MarqueChassis__c.field-meta.xml
<CustomField>
    <fullName>MarqueChassis__c</fullName>
    <label>Marque Châssis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Citroen</fullName>
            </value>
            <value>
                <fullName>Dacia</fullName>
            </value>
            <value>
                <fullName>DAF</fullName>
            </value>
            <value>
                <fullName>Fiat</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Hino</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Isuzu</fullName>
            </value>
            <value>
                <fullName>Iveco</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>MAN</fullName>
            </value>
            <value>
                <fullName>Mercedes</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Opel</fullName>
            </value>
            <value>
                <fullName>Peugeot</fullName>
            </value>
            <value>
                <fullName>Renault</fullName>
            </value>
            <value>
                <fullName>RVI</fullName>
            </value>
            <value>
                <fullName>Scania</fullName>
            </value>
            <value>
                <fullName>Vauxhall</fullName>
            </value>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
            <value>
                <fullName>Volvo</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>