unpackaged/main/default/objects/PotentielContainers__c/fields/Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Prestataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestataire</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le prestataire choisi doit être un compte concurrent.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte Concurrent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>ParcsClientContainers_Prestataire</relationshipName>
    <type>Lookup</type>
</CustomField>