unpackaged/main/default/objects/PotentielContainers__c/fields/SousCategorieProduit__c.field-meta.xml
<CustomField>
    <fullName>SousCategorieProduit__c</fullName>
    <label>Sous-catégorie Produit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>