unpackaged/main/default/objects/PotentielContainers__c/fields/TypeSourcing__c.field-meta.xml
<CustomField>
    <fullName>TypeSourcing__c</fullName>
    <label>Type sourcing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Location avec chauffeur</fullName>
            </value>
            <value>
                <fullName>Location sans chauffeur</fullName>
            </value>
            <value>
                <fullName>Propriété</fullName>
            </value>
            <value>
                <fullName>Transporteur dernier kilomètre</fullName>
            </value>
            <value>
                <fullName>Transporteur public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>